--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ body {
     background-color: blanchedalmond;
     position: relative;
 }
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .container {
     background-color: aquamarine;
     position: absolute;
@@ -18,27 +24,48 @@ body {
     width: 50%;
     height: 50%;
     border: 5px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .input-top-left,
 .input-top-right,
 .input-bottom-left,
 .input-bottom-right {
     position: absolute;
-    width: 3rem;
+    width: 4rem;
+    height: 2rem;
+    font-size: 20px;
+    text-align: center;
 }
 .input-top-left {
-    top: 22%;
+    top: 21%;
     left: 21%;
 }
 .input-top-right {
-    top: 22%;
+    top: 21%;
     right: 21%;
 }
 .input-bottom-left {
-    bottom: 22%;
+    bottom: 21%;
     left: 21%;
 }
 .input-bottom-right {
-    bottom: 22%;
+    bottom: 21%;
     right: 21%;
+}
+.buttons {
+    position: absolute;
+    bottom: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+#infoPreviewer {
+    background-color: black;
+    color: white;
+    width: 400px;
+    height: 200px;
+    font-size: 22px;
+    font-family: inherit;
 }
